# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./entries";
+export * from "./giveaways";
 export * from "./referralRewards";
